tests/ui/did_you_mean/issue-38147-3.stderr
error[E0596]: cannot borrow `*self.s` as mutable, as it is behind a `&` reference
  --> $DIR/issue-38147-3.rs:7:9
   |
LL |         self.s.push('x');
   |         ^^^^^^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
LL |     s: &'a mut String
   |            +++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
